[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/FontData/mplus-1p-bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/ControlButton/ControlButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.235294, 0.25098, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
shadow_color = Color( 0, 0, 0, 0.25098 )
shadow_size = 3
shadow_offset = Vector2( 0, 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="ControlButto" type="MarginContainer"]
margin_top = 479.0
margin_right = 540.0
margin_bottom = 577.0
custom_constants/margin_right = 100
custom_constants/margin_top = 10
custom_constants/margin_left = 100
custom_constants/margin_bottom = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 110.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 88.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 320.0
margin_bottom = 78.0
custom_constants/margin_right = 128
custom_constants/margin_top = 16
custom_constants/margin_left = 128
custom_constants/margin_bottom = 16

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
margin_left = 128.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.568627 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "開始"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 100.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 88.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
